2009-11-24  Philippe Normand  <pnormand@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Gtk] GStreamer-CRITICAL's (and other warnings) on <video>
        https://bugs.webkit.org/show_bug.cgi?id=26354

        Implemented MediaPlayerPrivate::isAvailable by checking the
        presence of the playbin2 GStreamer element.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::isAvailable):
        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.h:

Canonical link: https://commits.webkit.org/42772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51343 268f45cc-cd09-0410-ab3c-d52691b4dbfc